# NixOS-WSL

./: CONTRIBUTING.md  SECURITY.md  flake.nix  suggestions.md
.github/actions/build-nix-expression/: action.yml
.github/actions/build-wsl-tarball/: action.yml
.github/actions/version/: action.yml
.github/workflows/: on_push.yml  release-drafter.yml  run_build.yml  run_checks.yml  run_docs.yml  run_enhanced_checks.yml  run_tests.yml
checks/: cargo-audit.nix  cargo-deny.nix  cargo-tree-duplicates.nix  clippy.nix  deadnix.nix  side-effects.nix  statix.nix
docs/src/: SUMMARY.md  design.md  install.md  maintenance.md  security.md
docs/src/how-to/: chrony.md  networking.md  wslg.md
modules/: build-tarball.nix  interop.nix  wsl-conf.nix  wsl-distro.nix
modules/systemd/native/: default.nix  wrap-shell.nix
tests/: chrony.Tests.ps1  extra-files.Tests.ps1  interop.Tests.ps1  path-splitting.Tests.ps1  shells.Tests.ps1  systemd-services.Tests.ps1  systemd-user.Tests.ps1  wsl-conf.Tests.ps1  wslg-mount.Tests.ps1  wslg.Tests.ps1
tests/docker/: docker.Tests.ps1
tests/lib/: lib.ps1
tests/login-shell/: login-shell.Tests.ps1  session-variables.nix
tests/slow-activation/: delay-activation.nix
tests/username-change/: username-change.Tests.ps1
utils/: Cargo.toml  deny.toml
utils/src/: shell_wrapper.rs  shim.rs  split_path.rs
