[package]
name = "nixos-wsl-utils"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
nix = { version = "0.29.0", features = ["mount", "process", "user", "inotify"] }
log = "0.4.22"
kernlog = "0.3.1"
systemd-journal-logger = "2.2.2"
clap = { version = "4.5.18", features = ["derive"] }

[[bin]]
name = "systemd-shim"
path = "src/shim.rs"

[[bin]]
name = "split-path"
path = "src/split_path.rs"

[[bin]]
name = "shell-wrapper"
path = "src/shell_wrapper.rs"
